--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,30 +1,214 @@
 .header-wrap{
+    position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
+    max-height: 12%;
+    box-shadow: 1px 1px 10px black;
+    background: transparent;
+    display: flex;
+    transition: .5s;
+    z-index: 15;
 }
 
-.navbar{
-    background-color: white;
-    min-height: 70px;
+.navScroll
+{
+    background: -moz-linear-gradient(-45deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 10%, rgba(44,153,221,1) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 10%, rgba(44,153,221,1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 10%, rgba(44,153,221,1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 10%, rgba(44,153,221,1) 100%);
+    background: linear-gradient(135deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 10%, rgba(44,153,221,1) 100%);   
+  
+    z-index: 10;
+  
+}
+
+.brandLogo
+{
+    padding: 10px;
+    padding-left: 0px;
+    width: 25%;
+}
+
+.navLinks
+{
+    width: 75%;
+    padding: 10px;
+    height: 100%;
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+
+}
+.desktopView
+{
+    align-items: center;
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+a{
+    position: relative;
+    display: inline-block;
+    outline: none;
+    text-decoration: none !important;
+    color: white;
+    padding: 10px 20px;
+    letter-spacing: 1.5px;
+    font-size: 1em;
     
-   
+	text-shadow: -1px 2px 4px black;
 }
-.navbar-brand{
-    color: black;
-    text-decoration: none;
-    padding-left: 20px;
+
+a:hover{
+    transition: .4s;
 }
-.navbar-brand:hover{
-    color: black;
+
+
+.menuWrapper
+{
+    position: fixed;
+    min-width: 100vw;
+    min-height: 100vh;
+    top: 0;
+    left: 0;
+    background: #4776E6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    z-index: 40;
+    transition: 1s;
+    opacity: 0;
+    display: none;
 }
-.nav-link{
-    color: black;
-    transition: color .4s ease-in-out;
-    font-weight: 500;
-    line-height: 2;
-    margin-left: 10px;
+.menuWrapper_fadein
+{
+    opacity: 1;
+    transition: 1s;
 }
-.nav-link:hover,
-.nav-link:active{
-    color: rgb(9, 253, 9);    
+.menuWrapper_display
+{
+    display: block;
 }
+
+
+.linksWrapper
+{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 40vh;
+}
+
+
+.menuWrapper_fadein .navLink
+{
+    opacity: 1;
+    transform: translateY(0);
+    transition: 2s;
+}
+
+
+
+#hamburger{
+    display: none;
+    width: 34px;
+    height: 20px;
+    position: fixed;
+    top: 9px;
+    right: 10px;
+    z-index: 50;
+    background: transparent;
+    outline: none;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+  }
+  
+  #hamburger span {
+    
+    position: absolute;
+    height: 5px;
+    width: 100%;
+    background: #204379;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+  
+  #hamburger span:nth-child(1) {
+    top: 0px;
+  }
+  
+  #hamburger span:nth-child(2) {
+    top: 10px;
+  }
+  
+  #hamburger span:nth-child(3) {
+    top: 20px;
+  }
+  
+  #hamburger.open span:nth-child(1) {
+    top: 10px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+  }
+  
+  #hamburger.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+  }
+  
+  #hamburger.open span:nth-child(3) {
+    top: 10px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+  }
+
+
+  @media only screen and (max-width: 1000px)
+  {
+      .brandLogo
+      {
+          padding: 6px;
+          width: 40%;
+      }
+      .desktopView  
+      {
+          display: none;
+      }
+      #hamburger
+      {
+          display: block;
+      }
+      .navLink
+{
+    opacity: 0;
+    transition: 1s;
+    transform: translateY(-15px);
+}
+  }
