--- a/src/views/components/sections/WhyUsSection/WhyUsSection.css
+++ b/src/views/components/sections/WhyUsSection/WhyUsSection.css
@@ -1,40 +1,44 @@
 .section_whyus
 {
-   background-color: white;
+	background-image: url("../../../../assets/img/caseStudy.png");
+	min-height: 100vh;
 }
 
 
-.whyus{
-    padding: 40px;
-}
 
 .title_whyus
 {
-    color:black;
+    color:white;
     margin: 2rem auto;
 
 }
 
-.description_whyus
+.divider
 {
-    font-size: 2.5vh;
-    color: grey;
-    word-spacing: .6rem;
-    line-height: 1.5;
+	max-width: 10%;
 }
 
-.img_whyus
+.casestudy_wrapper
 {
-    clip-path: polygon(39% 0, 100% 0, 100% 100%, 56% 100%, 19% 62%);
-    width: 100%;
-    height: 100%;
+	background-color: white;
+	text-align: center;
+
+	
 }
 
-@media screen and (max-width: 600px) {
-    .img_whyus{
-        display: none;
-    }
-  }
+.part-title
+{
+	font-weight: 500;
+}
+.part{
+	display: flex;
+	padding: 40px;
+	padding-top: 9rem;
+	flex-direction: column;
+	margin-bottom: 20px;
+}
+
+
 
 
 
