minor changes removed-CaseStudy, modified-Contact

--- a/src/views/components/sections/Rcard/Rcard.scss
+++ b/src/views/components/sections/Rcard/Rcard.scss
@@ -7,9 +7,9 @@
     flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
-    min-height: 100vh;
-	background: linear-gradient(180deg, black 5%, black 30%, transparent , black);
-	h2{
+	min-height: 100vh;
+	background-color: #204379;
+		h2{
 		color: white;
 		font-weight: 700;
 	}
