--- a/src/components/Parallax/Parallax.css
+++ b/src/components/Parallax/Parallax.css
@@ -2,14 +2,18 @@
 
 .parallax {
     /* The image used */
-    background-image: url("../../assets/img/bg4.png");
+    background-image: url("../../assets/img/hero.jpeg");
   
     /* Set a specific height */
     min-height: 100vh; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
   
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -17,10 +21,6 @@
   .title_div
   {
     color: white;
-    padding-top: 20%;
-    display: flex;
-    flex-direction: column;
-
   }
 
   
@@ -39,13 +39,15 @@
   }
   .title_btn
   {
-    background: transparent;
+    background: white;
     color: #204379;
     border: 1.5px solid #204379;
     text-transform: uppercase;
     padding: 10px 20px;
+    border-radius: 2px 10px;
     box-shadow: 1px 1px 10px gray;
     transition: 1s;
+  
   }
   .title_btn:hover{
     background-color: #204379;
