--- a/src/views/components/sections/ContactSection/ContactSection.css
+++ b/src/views/components/sections/ContactSection/ContactSection.css
@@ -3,7 +3,7 @@
 
   background-image: linear-gradient(rgba(0, 0, 0, 0.5),
   rgba(0, 0, 0, 0.5)), url("../../../../assets/img/map.jpg");
-
+  
 }
 
 input{
@@ -20,14 +20,20 @@ textarea{
   font-weight: 500;
 }
 .divider
-{
-  max-width: 10%;
+{ 
+  display: inline-block;
+  width: 10%;
+  margin-bottom: 20px;
+  border-top: 2px solid white;
 }
 
 .contactWrapper
 {
   background-color: white;
   box-shadow: 1px 1px 20px black;
+  border-radius: 10px;
+  width: 90%;
+  margin: auto;
 
 }
 .contact_details
@@ -35,7 +41,7 @@ textarea{
   color: white;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 10px;
   margin-top: 20%;
 }
 .contact_details_divs
@@ -74,7 +80,7 @@ input[type=text], textarea {
 .section {
   padding-top: 85px;
   padding-bottom: 60px;
-  background-color: #f2f2f2;
+  background-color: white;
  
 }
 
@@ -88,7 +94,7 @@ input[type=text], textarea {
 
 .wpcf7 input[type="email"]{
 	max-width: 100%;
-	padding:15px;
+	padding:10px;
 	border-radius: 20px;
 	margin-bottom:-10px;
 	box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.10);
@@ -105,18 +111,19 @@ input[type=text], textarea {
 .wpcf7 input:focus[type="email"]
 {
 	box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.20);
-	border-color: #204379;
+  border-color: #204379;
+  transition: .6s;
 }
 
 .wpcf7 input[type="submit"] {
-	font-size: 1em;
+	font-size: .8em;
 	background: white;
 	border: 1px solid #204379;
 	font-family: "Lato";
 	font-weight: bold;
-	border-radius: 0;
-	padding: 1em;
-	width: 120px;
+
+	padding: .6em;
+	width: 100px;
 	color: #204379;
 	 box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
 	border-radius: 30px;
