--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -49,12 +49,13 @@ a{
     display: inline-block;
     outline: none;
     text-decoration: none !important;
-    color: white;
+    color: black;
     padding: 10px 20px;
     letter-spacing: 1.5px;
     font-size: 1em;
-    
-	text-shadow: -1px 2px 4px black;
+    font-weight: 700;
+    text-shadow: -1px 4px 4px gray;
+
 }
 
 a:hover{
