mobile responsive changes in blog section

--- a/src/views/components/sections/AboutSection/About.css
+++ b/src/views/components/sections/AboutSection/About.css
@@ -5,9 +5,12 @@
   
 }
 
-.divider
+.abt_s .divider
 {
-    max-width: 10%;
+    border-bottom: 2px solid black;
+    width: 7%;
+    margin-bottom: 20px;
+    margin-top: -10px;
 }
 
 .title_about
