--- a/src/views/components/sections/ProductsSection/ProductsSection.scss
+++ b/src/views/components/sections/ProductsSection/ProductsSection.scss
@@ -29,13 +29,16 @@
         min-height: 160px;
         min-width: 280px;
         max-width: 300px;
+        max-height: 35vh;
     }
 }
+.product_section{
 .divider
 {
     border-bottom: 2px solid black;
-    width: 10%;
+    width: 7%;
     margin-bottom: 20px;
-    margin-top: -5px;
+    margin-top: -10px;
+}
 }
 
