--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   overscroll-behavior-y: contain; 
 }
 
+.container
+{
+  text-align: center;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
