--- a/src/views/components/sections/Ptest/Ptest.scss
+++ b/src/views/components/sections/Ptest/Ptest.scss
@@ -86,7 +86,8 @@ background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, F
 .pcard
 {   
     position: relative;
-    width: 85%;
+    width: 100%;
+    max-height: 240px;
     height: 46vh;
     margin: 10px auto;
     border-radius: 10px;
@@ -134,7 +135,7 @@ background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, F
 
         .ptitle
         {
-            transform: translateY(-10px);
+          
             text-shadow: 1px 1px 3px black, -1px 1px 2px black ;
             transition: .4s;
         }
@@ -168,7 +169,13 @@ background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, F
 
 @media only screen and (min-width: 900px)
 {
+    .ptitle{
+        transform: translateY(-10px);
+    }
     .pcard{
+        width: 85%;
+        max-height: 100vh;
+        
         &::after
         {
         
@@ -225,10 +232,11 @@ background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, F
             transition: .5s;
         }
         }
+        .pbutton
+        {
+            display: none;
+        }
         
     }
-    .pbutton
-    {
-        display: none;
-    }
+   
 }
