--- a/src/components/Parallax/Parallax.css
+++ b/src/components/Parallax/Parallax.css
@@ -2,7 +2,7 @@
 
 .parallax {
     /* The image used */
-    background-image: url("../../assets/img/hero.jpeg");
+    background-image: url("../../assets/img/hero.jpg");
   
     /* Set a specific height */
     min-height: 100vh; 
@@ -44,7 +44,7 @@
     border: 1.5px solid #204379;
     text-transform: uppercase;
     padding: 10px 20px;
-    border-radius: 2px 10px;
+    border-radius:3px;
     box-shadow: 1px 1px 10px gray;
     transition: 1s;
   
