--- a/src/views/components/sections/Rcard/Rcard.scss
+++ b/src/views/components/sections/Rcard/Rcard.scss
@@ -8,10 +8,12 @@
 	align-items: center;
 	justify-content: space-evenly;
 	min-height: 100vh;
+	padding-bottom: 30px;
 	background-color: #204379;
 		h2{
 		color: white;
 		font-weight: 700;
+		margin: 1em auto;
 	}
    
 }
@@ -41,8 +43,8 @@
 .tilter {
 	display: block;
 	position: relative;
-	width: 280px;
-	height: 350px;
+	width: 320px;
+	height: 400px;
 	margin: 0;
 	color: #fff;
 	flex: none;
@@ -111,7 +113,7 @@
 	height: 200%;
 	top: -50%;
 	left: -50%;
-	background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0.25) 50%, transparent 100%);
+	background-image: linear-gradient(45deg, rgba(0, 0, 0, 1) 0%, rgba(255, 255, 255, 0.1) 50%, transparent 100%);
 }
 
 .tilter__deco--lines {
