--- a/src/views/components/sections/Ptest/Ptest.scss
+++ b/src/views/components/sections/Ptest/Ptest.scss
@@ -1,7 +1,7 @@
 
 .ptest_section
 {
-    min-height: 100vh;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -30,9 +30,13 @@
 .pcard
 {   
     position: relative;
-    width: 100%;
-    max-height: 240px;
-    height: 46vh;
+    width: 80%;
+    padding-top: 44%;
+    min-width: 300px;
+    min-height: 170px;
+    max-height: 95vh;
+    max-width: 95vw;
+
     margin: 10px auto;
     border-radius: 10px;
     overflow: hidden;
@@ -92,8 +96,7 @@
         transform: translateY(-10px);
     }
     .pcard{
-        width: 85%;
-        max-height: 100vh;
+    
         
         &::after
         {
