--- a/src/views/components/sections/Rcard/Rcard.scss
+++ b/src/views/components/sections/Rcard/Rcard.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
-
+	overflow-x: hidden;
 	padding-bottom: 30px;
 	padding-top: 40px;
 	background-color: #204379;
@@ -51,8 +51,8 @@
 .tilter {
 	display: block;
 	position: relative;
-	width: 251px;
-	height: 307px;
+	width: 326.3px;
+	height: 399.1px;
 	margin: 0;
 	color: #fff;
 	flex: none;
