--- a/src/views/components/sections/Ptest/Ptest.scss
+++ b/src/views/components/sections/Ptest/Ptest.scss
@@ -88,7 +88,7 @@
 
         .ptitle
         {
-          
+            text-align: center;
             text-shadow: 1px 1px 3px black, -1px 1px 2px black ;
             transition: .4s;
             font-size: 170%;
@@ -99,7 +99,7 @@
             transition: .4s;
             padding: 10px;
             text-align: center;
-            font-size: 80%;
+            font-size: 95%;
         }
   
 }
