--- a/src/views/components/sections/Rcard/Rcard.scss
+++ b/src/views/components/sections/Rcard/Rcard.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
-	overflow-x: hidden;
+	overflow: hidden;
 	padding-bottom: 30px;
 	padding-top: 40px;
 	background-color: #204379;
