designed profile page

--- a/src/views/components/sections/ProfileSection/ProfileSection.scss
+++ b/src/views/components/sections/ProfileSection/ProfileSection.scss
@@ -7,23 +7,10 @@
 }
 .p_s
 {
-    border-bottom: 2px solid black;
+    padding-top: 30px;
+  
 }
-.p_img
-{   
-    height: 399.1px;
-    width: 326.3px;
-    max-height: 90vh;
-    max-width: 90vw;
-    margin: 20px auto;
-   
-    img
-    {
-        border-radius: 10px;
-        height: 100%;
-        width: 100%;
-    }
-}
+
 .backbtn
 {
     position: absolute;
