--- a/src/views/components/sections/ProfileSection/ProfileSection.scss
+++ b/src/views/components/sections/ProfileSection/ProfileSection.scss
@@ -1,20 +1,30 @@
 .profile
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    display : flex ;
+    flex-direction : column ;
+    justify-content : space-evenly ;
+    align-items : center ;
 }
 .p_s
 {
-    padding-top: 30px;
-  
+    border-bottom : 2px  solid  black ;
+    background-color:  rgba(61,66,70,.1) !important;
 }
+.p_img
 
-.backbtn
-{
-    position: absolute;
-    left: 10px;
-    top: 10px;
-
+{   
+    height : 399.1px ;
+    width : 326.3px ;
+    max-height : 90vh ;
+    max-width : 90vw ;
+    margin : 20px auto ;
+    box-shadow: 1px 1px 10px rgba(0,0,0,.4);
+    border-radius : 20px ;
+    img
+    {
+        border-radius : 20px ;
+        height : 100% ;
+        width : 100% ;
+        
+    }
 }
