--- a/src/components/Parallax/Parallax.css
+++ b/src/components/Parallax/Parallax.css
@@ -2,7 +2,7 @@
 
 .parallax {
     /* The image used */
-    background-image: url("../../assets/img/hero.jpg");
+    background: url("../../assets/img/hero.jpg");
   
     /* Set a specific height */
     min-height: 100vh; 
@@ -13,9 +13,17 @@
   
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
-    background-position: top;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+-webkit-background-position: center;
+-webkit-background-repeat: no-repeat;
+-webkit-background-size: cover;
+
+-moz-background-position: center;
+-moz-background-repeat: no-repeat;
+-moz-background-size: cover;
   }
   
   .title_div
@@ -54,3 +62,12 @@
     color: white;
     transition: 1s;
   }
+
+
+@media only screen and (max-width: 500px)
+{
+  .parallax
+  {
+    background-attachment: scroll;
+  }
+}
