--- a/src/views/components/sections/ContactSection/ContactSection.css
+++ b/src/views/components/sections/ContactSection/ContactSection.css
@@ -85,11 +85,11 @@ input[type=text], textarea {
 }
 
 
-.wpcf7{ 
 
-	margin:2em;
+.wpcf7
+{
+  margin: 2em;
 }
-
 .wpcf7 input[type="text"],
 
 .wpcf7 input[type="email"]{
@@ -122,11 +122,11 @@ input[type=text], textarea {
     color: #204379;
     border: 1.5px solid #204379;
     text-transform: uppercase;
-    padding: 10px 20px;
+    padding: 10px 30px;
     border-radius:3px;
     box-shadow: 1px 1px 10px gray;
     transition: 1s;
-    margin-top: 10px;
+    margin-bottom: 10px;
   }
  
 
@@ -153,9 +153,24 @@ height: 8em;
 
 iframe{
   width: 100% !important;
-  display: flex;
+
 }
-.rc-anchor-center-item
+.contact_recaptcha 
 {
-  font-size: .8em !important;
+  
+  align-items: center;
+  justify-content: center;
+  max-width: 95vw;
+}
+
+@media only screen and (max-width: 500px)
+{
+  .contact_recaptcha_main
+  {
+    transform: scale(.9);
+  }
+  .wpcf7
+  {
+    margin: 0;
+  }
 }
